--- a/app/static/styles/video_page.css
+++ b/app/static/styles/video_page.css
@@ -15,30 +15,44 @@ h1 {
     font-size: 1.5rem;
 }
 
-.info {
+.channel-info,
+.video-info {
     margin-left: 0.5rem;
     display: flex;
     flex-direction: row;
     align-items: center;
 }
 
-.info > * {
+.channel-info {
+    column-gap: 1rem;
+}
+
+.video-info {
+    margin-top: 1rem;
+}
+
+.video-info > * {
     margin: 0;
     font-weight: bolder;
 }
 
-.info > *::before {
+.video-info > *::before {
     display: inline;
     content: '•';
-    margin: 0 0.25rem;
+    margin: 0 0.5rem;
 }
 
-.info > :first-child::before {
+.video-info > :first-child::before {
     display: none;
     content: unset;
 }
 
-.info #subscribe-button {
+.channel-info a {
+    font-weight: bolder;
+    font-size: 1.25rem;
+}
+
+.channel-info #subscribe-button {
     width: 10rem;
     height: fit-content;
     padding: 10px 20px;
@@ -49,14 +63,22 @@ h1 {
     transition: background-color 0.1s;
 }
 
-.info #subscribe-button.subscribe {
+.channel-info #subscribe-button.subscribe {
     background-color: #202020;
     color: white;
 }
 
-.info #subscribe-button.subscribed {
+.channel-info #subscribe-button.subscribed {
     background-color: #909090;
     color: black;
+}
+
+.channel-info img {
+    max-width: fit-content;
+    max-height: fit-content;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 100%;
 }
 
 .description {
@@ -66,6 +88,8 @@ h1 {
     padding: 0.5rem;
     border-radius: 1rem;
     padding-bottom: 2rem;
+    margin-top: 0;
+    padding-top: 0;
 }
 
 .description * {
