fix sliding transition on the channel page

--- a/app/templates/channel_overview.html
+++ b/app/templates/channel_overview.html
@@ -37,7 +37,7 @@
             <a id="videos" class="active">Videos</a> | <a id="shorts">Shorts</a>
         </span>
     </div>
-    <div class="feed-container">
+    <div class="feed-container videos">
         <div class="video-feed">
         {% for video in videos %}
             
