--- a/app/static/styles/search_page.css
+++ b/app/static/styles/search_page.css
@@ -160,3 +160,50 @@
     color: #fff;
     font-weight: bolder;
 }
+
+
+/* Responsiveness */
+
+@media screen and (max-width: 1200px) {
+    .video-container {
+        margin-left: 1rem;
+        width: calc(100% - 2rem);
+    }
+    .video-container h2 {
+        font-size: 1.25rem;
+    }
+    .channel-info span {
+        font-size: 1rem;
+        font-weight: bolder;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .video-container {
+        margin-left: 1rem;
+        width: calc(100% - 2rem);
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .videos {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .video-container {
+        flex-direction: column;
+        height: unset;
+        width: 336px;
+    }
+    .video-container > * {
+        margin-left: 0.5rem;
+        margin-right: 0.5rem;
+    }
+    .video-container .thumbnail-container {
+        margin: 0;
+    }
+}
+
+@media screen and (max-width: 600px) {
+}
