Add placeholder pagination navigator

--- a/app/templates/channel_overview.html
+++ b/app/templates/channel_overview.html
@@ -68,4 +68,9 @@
         {% endfor %}
         </div>
     </div>
+    <div class="page-nav">
+        <a href="#">&lt</a>
+        <a href="#">1</a>
+        <a href="#">&gt</a>
+    </div>
 {% endblock %}
