--- a/app/static/styles/channel_overview.css
+++ b/app/static/styles/channel_overview.css
@@ -267,3 +267,14 @@
     width: auto;
     height: auto;
 }
+
+.page-nav {
+    margin: 1rem auto 2rem;
+}
+
+.page-nav * {
+    text-decoration: none;
+    color: #000000;
+    font-weight: bolder;
+    margin: 0 0.25rem;
+}
