--- a/app/static/styles/channel_overview.css
+++ b/app/static/styles/channel_overview.css
@@ -20,7 +20,8 @@
 .channel-banner > img {
     background-color: #000;
     width: 100%;
-    min-height: 6rem;
+    height: 20rem;
+    object-fit: cover;
     border-radius: 25px;
 }
 
