--- a/app/templates/video_page.html
+++ b/app/templates/video_page.html
@@ -44,7 +44,7 @@
                         <a href="{{ url_for('main.channel_overview', channel_id=comment.author_id) }}">{{ comment.author }}</a>
                         {{ comment.time_str }}
                     </span>
-                    <p>{{ comment.text }}</p>
+                    <p>{{ comment.text|safe }}</p>
                     <div class="comment-info">
                         {% if comment.has_several_likes %}
                             <span>{{ comment.like_count }} likes</span>
@@ -75,7 +75,7 @@
                                 <a href="{{ url_for('main.channel_overview', channel_id=reply.author_id) }}">{{ reply.author }}</a>
                                 {{ reply.time_str }}
                             </span>
-                            <p>{{ reply.text }}</p>
+                            <p>{{ reply.text|safe }}</p>
                             <div class="comment-info">
                                 {% if reply.has_several_likes %}
                                     <span>{{ reply.like_count }} likes</span>
