Format links in text

--- a/app/templates/video_page.html
+++ b/app/templates/video_page.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='styles/video_page.css') }}">
 <script defer src="{{ url_for('static', filename='scripts/read_more.js') }}"></script>
 <script defer src="{{ url_for('static', filename='scripts/collapse_comment_replies.js') }}"></script>
+<script defer src="{{ url_for('static', filename='scripts/format_links.js') }}"></script>
 {% endblock %}
 
 {% block content %}
