fixed search button id name in top search bar

--- a/app/templates/search_page.html
+++ b/app/templates/search_page.html
@@ -16,7 +16,7 @@
   <div class="search-box">
     <input type="text" id="searchInput" autofocus placeholder="search..">
 
-    <button id="search-button">
+    <button id="searchButton">
       <img src="{{ url_for('static', filename='resources/assets/magnifying-glass-icon.svg') }}"></img>
     </button>
   </div>
