--- a/app/static/styles/search_page.css
+++ b/app/static/styles/search_page.css
@@ -34,7 +34,7 @@
   flex-grow: 1;
 }
 
-.search-container .search-box #search-button {
+.search-container .search-box #searchButton{
   height: 30px;
   background: none;
   border: none;
@@ -44,7 +44,7 @@
   align-items: center;
 }
 
-.search-container .search-box #search-button img {
+.search-container .search-box #searchButton img {
   height: calc(100% - 10px);
   margin: 5px 0;
   filter: invert(100%);
