--- a/app/static/styles/channel_overview.css
+++ b/app/static/styles/channel_overview.css
@@ -146,11 +146,11 @@
 
 /* Videos */
 
-.video-feed {
+#video-feed {
     width: 100%;
 }
 
-.video-feed > .page {
+#video-feed > .page {
     display: flex;
     justify-content: center;
     align-items: flex-start;
