--- a/app/templates/channel_overview.html
+++ b/app/templates/channel_overview.html
@@ -9,6 +9,7 @@
 
 <script>
     const playlist_id = "{{ channel_info.playlist_id }}";
+    let nextPageToken = "{{ next_page_token }}";
 </script>
 
 <script defer src="{{ url_for('static', filename='scripts/change_page_button.js') }}"></script>
@@ -78,7 +79,7 @@
     </div>
     <div class="page-nav">
         <a href="#">&lt</a>
-        <a href="#">1</a>
+        <a id="currentPageNum">1</a>
         <a id="nextPageButton" href="#">&gt</a>
     </div>
 {% endblock %}
