implemented switching between pages

--- a/app/templates/channel_overview.html
+++ b/app/templates/channel_overview.html
@@ -78,7 +78,7 @@
         </div>
     </div>
     <div class="page-nav">
-        <a href="#">&lt</a>
+        <a id="previousPageButton" href="#">&lt</a>
         <a id="currentPageNum">1</a>
         <a id="nextPageButton" href="#">&gt</a>
     </div>
