implemented no-show property to disable visibility of an element without altering page spacing

--- a/app/static/styles/base.css
+++ b/app/static/styles/base.css
@@ -19,6 +19,10 @@ body {
     display: none!important;
 }
 
+.no-show {
+    visibility: hidden;
+}
+
 .read-more {
     height: fit-content;
     z-index: inherit;
