--- a/app/templates/channel_overview.html
+++ b/app/templates/channel_overview.html
@@ -8,8 +8,8 @@
 <script defer src="{{ url_for('static', filename='scripts/subscribe_button.js') }}"></script>
 
 <script>
-    const playlist_id = "{{ channel_info.playlist_id }}";
-    let nextPageToken = "{{ next_page_token }}";
+    const playlist_id = {{ channel_info.playlist_id|tojson|safe }};
+    let nextPageToken = {{ next_page_token|tojson|safe }};
 </script>
 
 <script defer src="{{ url_for('static', filename='scripts/change_page_button.js') }}"></script>
