--- a/app/templates/search_results_page.html
+++ b/app/templates/search_results_page.html
@@ -64,5 +64,5 @@
 	</div>
     </div>
 
-<a id="fetchMoreSearchResultsButton">show more</a>
+<div id="fetchMoreSearchResultsButtonContainer"><a id="fetchMoreSearchResultsButton">Show more</a></div>
 {% endblock %}
