--- a/app/templates/search_results_page.html
+++ b/app/templates/search_results_page.html
@@ -64,5 +64,5 @@
 	</div>
     </div>
 
-<div id="fetchMoreSearchResultsButtonContainer"><a id="fetchMoreSearchResultsButton">Show more</a></div>
+<div class="more-results-container"><a id="fetchMoreSearchResultsButton">Show more</a></div>
 {% endblock %}
