Style/structure auth pages and add form validation

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,9 +2,27 @@
 
 {% block head %}
 <title>yt - login</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='styles/login.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='styles/auth.css') }}">
+<script defer src="{{ url_for('static', filename='scripts/auth.js') }}"></script>
 {% endblock %}
 
 {% block content %}
-<h1>login page</h1>
+<h1>Login</h1>
+<form id="loginForm">
+    <div class="form-item">
+        <label for="email">Email</label>
+        <input type="text" placeholder="Enter email..." name="email">
+    </div>
+    <div class="form-item">
+        <label for="password">Password</label>
+        <input type="password" placeholder="Enter password..." name="password">
+    </div>
+    <button type="submit">Login</button>
+    <span id="errorMessage" class="hidden">PNEUMONOULTRAMICROSCOPOICSILICOVOLCANOCONIOSIS</span>
+</form>
+<span>
+    Don't have an account?
+    <br/>
+    <a href="{{ url_for('main.signup') }}">Sign up here!</a>
+</span>
 {% endblock %}
