--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -2,9 +2,31 @@
 
 {% block head %}
 <title>yt - signup</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='styles/signup.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='styles/auth.css') }}">
+<script defer src="{{ url_for('static', filename='scripts/auth.js') }}"></script>
 {% endblock %}
 
 {% block content %}
-<h1>signup page</h1>
+<h1>Sign Up</h1>
+<form id="signupForm">
+    <div class="form-item">
+        <label for="email">Email</label>
+        <input type="text" placeholder="Enter email..." name="email">
+    </div>
+    <div class="form-item">
+        <label for="password">Password</label>
+        <input type="password" placeholder="Enter password..." name="password">
+    </div>
+    <div class="form-item">
+        <label for="password2">Re-enter your password</label>
+        <input type="password" placeholder="Re-enter password..." name="password2">
+    </div>
+    <button type="submit">Sign up</button>
+    <span id="errorMessage"></span>
+</form> 
+<span>
+    Already have an account?
+    <br/>
+    <a href="{{ url_for('main.login') }}">Log in here!</a>
+</span>
 {% endblock %}
