Fixed minor bugs on signup page

--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -22,7 +22,7 @@
         <input type="password" placeholder="Re-enter password..." name="password2">
     </div>
     <button type="submit">Sign up</button>
-    <span id="errorMessage"></span>
+    <span id="errorMessage" class="hidden"></span>
 </form> 
 <span>
     Already have an account?
