--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -13,12 +13,13 @@
         <label for="email">Email</label>
         <input type="text" placeholder="Enter email..." name="email">
     </div>
+    <span id="emailErrorMessage" class="hidden"></span>
     <div class="form-item">
         <label for="password">Password</label>
         <input type="password" placeholder="Enter password..." name="password">
     </div>
+    <span id="passwordErrorMessage" class="hidden"></span>
     <button type="submit">Login</button>
-    <span id="errorMessage" class="hidden">PNEUMONOULTRAMICROSCOPOICSILICOVOLCANOCONIOSIS</span>
 </form>
 <span>
     Don't have an account?
