--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -13,16 +13,18 @@
         <label for="email">Email</label>
         <input type="text" placeholder="Enter email..." name="email">
     </div>
+    <span id="emailErrorMessage" class="hidden"></span>
     <div class="form-item">
         <label for="password">Password</label>
         <input type="password" placeholder="Enter password..." name="password">
     </div>
+    <span id="passwordErrorMessage" class="hidden"></span>
     <div class="form-item">
         <label for="password2">Re-enter your password</label>
         <input type="password" placeholder="Re-enter password..." name="password2">
     </div>
+    <span id="password2ErrorMessage" class="hidden"></span>
     <button type="submit">Sign up</button>
-    <span id="errorMessage" class="hidden"></span>
 </form> 
 <span>
     Already have an account?
