--- a/app/static/styles/search_page.css
+++ b/app/static/styles/search_page.css
@@ -33,6 +33,8 @@
   color: #E0E0E0;
   font-size: 24px;
   flex-grow: 1;
+  font-family: Arial, sans-serif;
+  resize: none;
 }
 
 .search-container .search-box #searchButton{
