--- a/app/templates/search_page.html
+++ b/app/templates/search_page.html
@@ -13,13 +13,13 @@
 
 <div class="search-container">
   <h1 class="title">search</h1>
-  <div class="search-box">
-    <input type="text" id="searchInput" autofocus placeholder="search..">
+  <form class="search-box">
+    <textarea type="text" id="searchInput" autofocus placeholder="search.."></textarea>
 
     <button id="searchButton">
       <img src="{{ url_for('static', filename='resources/assets/magnifying-glass-icon.svg') }}"></img>
     </button>
-  </div>
+  </form>
 
  <div class="buttons">
     <a href="">home</a>
