--- a/app/templates/search_results_page.html
+++ b/app/templates/search_results_page.html
@@ -3,11 +3,9 @@
 {% block head %}
 <title>yt - search</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='styles/search_results_page.css') }}">
-<script defer src="{{ url_for('static', filename='scripts/shorts_carousel.js') }}"></script>
 
 <script>
-    const query = {{ query|tojson|safe }};
-    let nextPageToken = {{ next_page_token|tojson|safe }};
+    data = {{ data|tojson|safe }};
 </script>
 
 <script defer src="{{ url_for('static', filename='scripts/fetch_more_search_results.js') }}"></script>
@@ -17,51 +15,7 @@
 {% block content %}
     {% include "top_bar_template.html" %}
 
-    {% if shorts|length > 0 %}
-    <div id="shorts-carousel">
-        <button id="left-arrow" class="arrow">&lt;</button>
-        {% for short in shorts %}
-        <div class="short-container">
-            <a href="{{ url_for('main.video_page', video_id=short.video_id) }}">
-                <img src="{{ short.thumbnail }}"/>
-            </a>
-            <div class="short-info">
-                <a href="{{ url_for('main.video_page', video_id=short.video_id) }}"><h2>{{ short.title }}</h2></a>
-                <p>
-                    <a href="{{ url_for('main.channel_overview', channel_id=short.channel_id) }}">{{ short.channel_name }}</a>
-                    <span>{{ short.views }} views</span>
-                </p>
-            </div>
-        </div>
-        {% endfor %}
-        <button id="right-arrow" class="arrow">&gt;</button>
-    </div>
-    {% endif %}
-
     <div id="videos">
-	<div class="page">
-            {% for video in videos %}
-            <div class="video-container">
-                <a href="{{ url_for('main.video_page', video_id=video.video_id) }}" class="thumbnail-container">
-                    <img src="{{ video.thumbnail }}"/>
-                    {% if video.duration %}
-                        <span>{{ video.duration }}</span>
-                    {% endif %}
-                </a>
-                <a href="{{ url_for('main.video_page', video_id=video.video_id) }}"><h2>{{ video.title }}</h2></a>
-                <a href="{{ url_for('main.channel_overview', channel_id=video.channel_id) }}">
-                    <div class="channel-info">
-                        <img src="{{ video.channel_pic }}"/>
-                        <span>{{ video.channel_name }}</span>
-                    </div>
-                </a>
-                <p>{{ video.views }} views</p>
-                {% if video.description %}
-                    <p>{{ video.description }}</p>
-                {% endif %}
-            </div>
-            {% endfor %}
-	</div>
     </div>
 
 <div class="more-results-container"><a id="fetchMoreSearchResultsButton">Show more</a></div>
