--- a/app/templates/channel_overview.html
+++ b/app/templates/channel_overview.html
@@ -8,8 +8,7 @@
 <script defer src="{{ url_for('static', filename='scripts/subscribe_button.js') }}"></script>
 
 <script>
-    const playlist_id = {{ channel_info.playlist_id|tojson|safe }};
-    let nextPageToken = {{ next_page_token|tojson|safe }};
+    let channelVideos = {{ channel_videos|tojson|safe }};
 </script>
 
 <script defer src="{{ url_for('static', filename='scripts/change_page_button.js') }}"></script>
@@ -46,35 +45,6 @@
     </div>
     <div class="feed-container videos">
         <div id="video-feed">
-            <div class="page">
-            {% for video in videos %}
-                <div class="video-container">
-                    <a href="{{ url_for('main.video_page', video_id=video.video_id) }}" class="thumbnail-container">
-                        <img src="{{ video.thumbnail }}" loading="lazy">
-                        <span>{{ video.duration }}</span>
-                    </a>
-                    <p>{{ video.views }}</p>
-                    <a href="{{ url_for('main.video_page', video_id=video.video_id) }}">
-                        <h2>{{ video.title }}</h2>
-                    </a>
-                </div>
-            {% endfor %}
-            </div>
-        </div>
-        <div class="short-feed">
-            <div class="page">
-            {% for short in shorts %}
-                <a href="{{ url_for('main.video_page', video_id=short.video_id) }}">
-                    <div class="short-container">
-                        <img src="{{ short.thumbnail }}" loading="lazy">
-                        <div>
-                            <h2>{{ short.title }}</h2>
-                            <span>{{ short.views }}</span>
-                        </div>
-                    </div>
-                </a>
-            {% endfor %}
-            </div>
         </div>
     </div>
     <div class="page-nav">
