Remove references to shorts from channel overviews

--- a/app/templates/channel_overview.html
+++ b/app/templates/channel_overview.html
@@ -40,7 +40,7 @@
     </div>
     <div class="feed-selector">
         <span>
-            <a id="videos" class="active">Videos</a> | <a id="shorts">Shorts</a>
+            <a class="active">Videos</a>
         </span>
     </div>
     <div class="feed-container videos">
