--- a/app/templates/video_page.html
+++ b/app/templates/video_page.html
@@ -7,10 +7,15 @@
 <script defer src="{{ url_for('static', filename='scripts/collapse_comment_replies.js') }}"></script>
 <script defer src="{{ url_for('static', filename='scripts/format_links.js') }}"></script>
 
+<script src="{{ url_for('static', filename='scripts/content_loader.js') }}"></script>
 <script>
-    commentData = {{ comment_data|tojson|safe }};
+    document.addEventListener("DOMContentLoaded", function() {
+        const videoCommentsFirstPage = JSON.parse({{ video_comments_first_page|tojson|safe }});
+        const videoCommentsHandler = new VideoCommentsHandler();
+
+        videoCommentsHandler.processPage(videoCommentsFirstPage);
+    });
 </script>
-<script defer src="{{ url_for('static', filename='scripts/fetch_more_comments.js') }}"></script>
 {% endblock %}
 
 {% block content %}
