--- a/app/static/styles/channel_overview.css
+++ b/app/static/styles/channel_overview.css
@@ -212,70 +212,7 @@
     font-weight: bolder;
 }
 
-/* Shorts */
-
-.short-feed {
-    width: 100%;
-}
-
-.short-feed > .page {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    font-family: Arial, sans-serif;
-    flex-flow: wrap;
-    margin-bottom: 1rem;
-    width: 100%;
-}
-
-.short-feed > .page > a {
-    width: fit-content;
-    height: fit-content;
-    margin: 0.5rem;
-    align-self: stretch;
-    box-shadow: 0.5rem 0.5rem 0.25rem #0007;
-    background-color: none;
-}
-
-.short-container {
-    width: auto;
-    height: 45rem;
-    position: relative;
-    background-color: transparent;
-}
-
-.short-container div {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    position: absolute;
-    bottom: 0.5rem;
-    left: 0.5rem;
-    z-index: 5;
-    width: calc(100% - 0.5rem*2 - 0.25rem*2);
-    padding: 0.25rem;
-    border-radius: 0.25rem;
-    background-color: #0007;
-}
-
-.short-container div span {
-    color: #fff;
-    font-weight: bolder;
-    font-size: 0.75rem;
-}
-
-.short-container div h2 {
-    color: #fff;
-    font-weight: bolder;
-    font-size: 1rem;
-    margin: 0;
-}
-
-.short-container img {
-    max-width: 100%;
-    width: auto;
-    height: auto;
-}
+/* Page Navigation */
 
 .page-nav {
     margin: 1rem auto 2rem;
