removed reference to multiple feeds

--- a/app/templates/channel_overview.html
+++ b/app/templates/channel_overview.html
@@ -43,15 +43,9 @@
             {% endif %}
         </div>
     </div>
-    <div class="feed-selector">
-        <span>
-            <a class="active">Videos</a>
-        </span>
-    </div>
-    <div class="feed-container videos">
-        <div id="video-feed">
-        </div>
-    </div>
+
+    <div id="video-feed"></div>
+
     <div class="page-nav">
         <a id="previousPageButton" href="#" class="no-show">&lt</a>
         <a id="currentPageNum">1</a>
