update branch by merging from main
Squashed commit of the following:

commit e62a52bf04862c8010586371c768a0aabc271625
Author: Ryan-AW <ryanawhittock@outlook.com>
Date:   Fri May 23 16:55:26 2025 +0100

    added secret key for flask server

commit a80a71da4b8e429ed68165a722072b8d683dfba1
Author: Ryan-AW <ryanawhittock@outlook.com>
Date:   Fri May 23 16:27:32 2025 +0100

    added -- when invoking subprocesses to stop data starting with a hyphen being interprected as a flag

commit e3f57215e6d8b2b72ca8bf3840329fe29aa2b815
Merge: 79ce438 f32c3da
Author: Ryan-AW <ryanawhittock@outlook.com>
Date:   Thu May 22 20:37:05 2025 +0100

    Merge pull request #38 from Ryan-AW/implement_subprocess_api_calls

    Implement subprocess api calls

commit f32c3da363c5f5dc169ed4dbd1db062d0a1bae6b
Author: Ryan-AW <ryanawhittock@outlook.com>
Date:   Thu May 22 20:34:01 2025 +0100

    created subprocess for fetching channel info

    Squashed commit of the following:

    commit e6d952a91159acbdd4491f8d8dec84143e570f02
    Author: Ryan-AW <ryanawhittock@outlook.com>
    Date:   Thu May 22 20:30:40 2025 +0100

        moved _fetch_channel_info.py to info_requests/ directory

    commit 492599ce4bbf4cd6f1af8f6cb33d88a3268a9304
    Author: Ryan-AW <ryanawhittock@outlook.com>
    Date:   Thu May 22 20:24:57 2025 +0100

        converted to using te subprocess when fetching channel info

    commit bc4c2ceb2e9c27857a4d170ebb36ae981112d296
    Author: Ryan-AW <ryanawhittock@outlook.com>
    Date:   Thu May 22 20:21:55 2025 +0100

        created subprocess for fetching channel info

commit 52ec29993988c38730246febd898483c237a05fb
Author: Ryan-AW <ryanawhittock@outlook.com>
Date:   Thu May 22 20:10:57 2025 +0100

    fetch video info using existing subprocess

    Squashed commit of the following:

    commit ecd79f9553ebeffc704d1bbebf4a57323fbf84cb
    Author: Ryan-AW <ryanawhittock@outlook.com>
    Date:   Thu May 22 20:05:39 2025 +0100

        moved _fetch_video_info.py to a new directory

--- a/app/templates/channel_overview.html
+++ b/app/templates/channel_overview.html
@@ -4,8 +4,19 @@
 <title>yt - channel</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='styles/channel_overview.css') }}">
 <script defer src="{{ url_for('static', filename='scripts/read_more.js') }}"></script>
-<script defer src="{{ url_for('static', filename='scripts/videos_or_shorts.js') }}"></script>
 <script defer src="{{ url_for('static', filename='scripts/subscribe_button.js') }}"></script>
+
+
+<script src="{{ url_for('static', filename='scripts/content_loader.js') }}"></script>
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        const channelVideosFirstPage = JSON.parse({{ channel_videos_first_page|tojson|safe }});
+        const channelVideosHandler = new ChannelVideosHandler();
+
+        channelVideosHandler.processPage(channelVideosFirstPage);
+    });
+</script>
+
 {% endblock %}
 
 {% block content %}
@@ -32,40 +43,12 @@
             {% endif %}
         </div>
     </div>
-    <div class="feed-selector">
-        <span>
-            <a id="videos" class="active">Videos</a> | <a id="shorts">Shorts</a>
-        </span>
-    </div>
-    <div class="feed-container videos">
-        <div class="video-feed">
-        {% for video in videos %}
-            
-                <div class="video-container">
-                    <a href="{{ url_for('main.video_page', video_id=video.video_id) }}" class="thumbnail-container">
-                        <img src="{{ video.thumbnail }}" loading="lazy">
-                        <span>{{ video.duration }}</span>
-                    </a>
-                    <p>{{ video.views }}</p>
-                    <a href="{{ url_for('main.video_page', video_id=video.video_id) }}">
-                        <h2>{{ video.title }}</h2>
-                    </a>
-                </div>
-            
-        {% endfor %}
-        </div>
-        <div class="short-feed">
-        {% for short in shorts %}
-            <a href="{{ url_for('main.video_page', video_id=short.video_id) }}">
-                <div class="short-container">
-                    <img src="{{ short.thumbnail }}" loading="lazy">
-                    <div>
-                        <h2>{{ short.title }}</h2>
-                        <span>{{ short.views }}</span>
-                    </div>
-                </div>
-            </a>
-        {% endfor %}
-        </div>
+
+    <div id="video-feed"></div>
+
+    <div class="page-nav">
+        <a id="previousPageButton" href="#" class="no-show">&lt</a>
+        <a id="currentPageNum">1</a>
+        <a id="nextPageButton" href="#">&gt</a>
     </div>
 {% endblock %}
