--- a/app/static/styles/search_page.css
+++ b/app/static/styles/search_page.css
@@ -1,164 +1,75 @@
-/* Videos */
-
-.videos {
-    display: flex;
-    flex-direction: column;
-    padding-bottom: 15vh;
+.moving-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #070000;
 }
 
-.video-container {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    border-radius: 7px;
-    overflow: hidden;
-    height: 11.75rem;
-    width: 90%;
-    align-content: flex-start;
-    column-gap: 1rem;
-    margin: 0 0 1rem 5%;
-    box-shadow: 0.5rem 0.5rem 0.25rem #0007, inset 0 0 0.25rem 0.125rem #0003;
+.search-container {
+  position: relative;
+  color: #E0E0E0;
+  padding-top: 5vh;
+  text-align: center;
 }
 
-.channel-info {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    column-gap: 0.5rem;
+.search-container .search-box {
+  height: 30px;
+  width: 80%;
+  margin: auto;
+  border: 1px solid #E0E0E0;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  padding: 0 10px;
+  background-color: black;
 }
 
-.channel-info img {
-    border-radius: 100%;
-    width: 2rem;
-    height: 2rem;
-    background-color: #000000;
-    object-fit: cover;
-    object-position: center;
+.search-container .search-box #searchInput {
+  height: 100%;
+  outline: none;
+  border: none;
+  padding: 10px 0;
+  background-color: transparent !important;
+  color: #E0E0E0;
+  font-size: 24px;
+  flex-grow: 1;
+  font-family: Arial, sans-serif;
+  resize: none;
 }
 
-.video-container a {
-    text-decoration: none;
+.search-container .search-box #searchButton{
+  height: 30px;
+  background: none;
+  border: none;
+  border-left: 2px solid #E0E0E0;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
 }
 
-.video-container h2 {
-    color: #000;
+.search-container .search-box #searchButton img {
+  height: calc(100% - 10px);
+  margin: 5px 0;
+  filter: invert(100%);
 }
 
-.video-container h2:hover {
-    text-decoration: underline;
+.search-container .buttons a {
+  color: #E0E0E0;
+  text-decoration: none;
+  margin: 1%;
+  padding: 5px;
+  width: 100%;
 }
 
-.channel-info span {
-    color: #000000;
-    font-size: 1.25rem;
-    cursor: pointer;
+::placeholder {
+  font-size: 18px;
+  opacity: 1; /* Firefox */
+  color: #E0E0E0;
 }
 
-.channel-info span:hover {
-    text-decoration: underline;
-}
-
-/* Shorts */
-
-#shorts-carousel {
-    display: flex;
-    flex-direction: row;
-}
-
-.short-container {
-    position: relative;
-    height: 404px;
-    width: 225px;
-    margin: 0 0 1rem 1rem;
-    box-shadow: 0.5rem 0.5rem 0.25rem #0007, inset 0 0 0.25rem 0.125rem #0003;
-}
-
-.short-info {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    position: absolute;
-    bottom: 0.5rem;
-    left: 0.5rem;
-    z-index: 5;
-    width: calc(100% - 0.5rem*2 - 0.25rem*2);
-    padding: 0.25rem;
-    border-radius: 0.25rem;
-    background-color: #000b;
-}
-
-#shorts-carousel {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-}
-
-
-.short-container.hidden {
-    display: none;
-}
-
-.short-container > a > img {
-    object-fit: none;
-    object-position: center;
-    height: 404px;
-    width: 225px;
-}
-
-.short-container a {
-    text-decoration: none;
-}
-
-.short-container a:hover {
-    text-decoration: underline;
-}
-
-.arrow {
-    background-color: transparent;
-    border: none;
-    font-size: 2em;
-    cursor: pointer;
-}
-
-#left-arrow {
-    left: 0;
-}
-
-#right-arrow {
-    right: 0;
-}
-
-.short-info * {
-    color: #ffffff;
-    margin: 0;
-    font-size: 0.75rem;
-    font-weight: bolder;
-}
-
-.short-info h2 {
-    font-size: 1rem;
-}
-
-.thumbnail-container {
-    max-width: 21rem;
-    max-height: 11.75rem;
-    position: relative;
-}
-
-.thumbnail-container img {
-    max-width: 100%;
-    width: auto;
-}
-
-.thumbnail-container span {
-    position: absolute;
-    bottom: 0.5rem;
-    right: 0.5rem;
-    padding: 0.25rem;
-    border-radius: 0.25rem;
-    background-color: #0007;
-    color: #fff;
-    font-weight: bolder;
+::-ms-input-placeholder { /* Edge 12 - 18 */
+  font-size: 18px;
+  color: #E0E0E0;
 }
 
 
