--- a/app/static/styles/video_page.css
+++ b/app/static/styles/video_page.css
@@ -87,6 +87,10 @@ h1 {
     background-color: #fff;
     margin: 0 0.5rem 2rem;
     border-radius: 1rem;
+    padding-bottom: 2rem;
+    margin-top: 0;
+    padding-top: 0;
+    white-space: pre-line;
 }
 
 .description * {
@@ -102,6 +106,28 @@ a {
 a:hover {
     text-decoration: underline;
 }
+
+
+
+/* Load more button */
+
+.more-comments-container {
+    width: fit-content;
+    padding: 2.5rem 0;
+    margin: 0 auto;
+    cursor: pointer;
+}
+
+.more-comments-container > * {
+    display: block;
+    width: fit-content;
+    padding: 1rem 2rem;
+    border-radius: 5rem;
+    border: #0003 solid 2px;
+    font-weight: bolder;
+}
+
+
 
 /* Comments */
 
@@ -126,11 +152,11 @@ a:hover {
     margin-left: 5rem;
 }
 
-.comments-section {
+#comments-section {
     padding-bottom: 2rem;
 }
 
-.comments-section h2 {
+#comments-section h2 {
     margin-bottom: 2rem;
     padding-bottom: 1rem;
     border-bottom: #0001 solid 1px;
